# FileZall

./: .gitignore  pyproject.toml
agent/: build-package.ps1  build-package.sh
agent/env/: filezall-agent.env.example
agent/filezall_agent/: config.py  files.py  resources.py  server.py
agent/systemd/: filezall-agent.service
docs/: agent-deployment.md  release.md
packaging/: README.md  filezall.spec  release-checksums.sh
packaging/macos/: build.sh  release.sh
packaging/windows/: FileZall.iss  build.ps1  release.ps1  sign.ps1
scripts/: performance-smoke.ps1  validate-linux-agent.ps1
src/filezall_core/: agent_client.py  agent_deployment.py  agent_file_client.py  agent_status.py  agent_transfer.py  agent_tunnel.py  app_paths.py  capabilities.py  client_factory.py  connection_recovery.py  credentials.py  diagnostics.py  directory_plan.py  ftp_adapter.py  local_files.py  log_service.py  models.py  performance.py  protocols.py  queue.py  redaction.py  resource_models.py  resource_monitor.py  resume.py  session.py  session_manager.py  settings_repository.py  sftp_adapter.py  site_import_export.py  site_repository.py  storage.py  time_format.py  transfer_repository.py  transfer_runner.py  transfer_settings.py
src/filezall_desktop/: __init__.py  agent_status_card.py  app.py  assets.py  conflict_dialog.py  controller.py  i18n.py  log_viewer.py  main_window.py  onboarding.py  performance_smoke.py  site_manager.py  theme.py  widgets.py
tests/: test_packaging_files.py
tests/agent/: test_agent_files.py  test_agent_http.py  test_agent_packaging.py  (+1 more)
(+81 files in other folders)
