[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filezall"
version = "0.1.0"
description = "Cross-platform desktop file transfer client with queued resumable transfers and optional Linux Agent."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
filezall = "filezall_desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
